--- a/deb/openmediavault/srv/salt/omv/deploy/avahi/services/files/smb.j2
+++ b/deb/openmediavault/srv/salt/omv/deploy/avahi/services/files/smb.j2
@@ -6,10 +6,11 @@
         <type>{{ type }}</type>
         <port>{{ port }}</port>
     </service>
+{%- if shares | selectattr('timemachine') | list | length > 0 %}
     <service>
         <type>_adisk._tcp</type>
         <txt-record>sys=waMa=0,adVF=0x100</txt-record>
-{%- for share in shares %}
+{%- for share in shares | selectattr('timemachine') %}
         <txt-record>dk{{ loop.index0 }}=adVN={{ salt['omv_conf.get_sharedfolder_name'](share.sharedfolderref) }},adVF=0x82</txt-record>
 {%- endfor %}
     </service>
@@ -18,4 +19,5 @@
         <port>0</port>
         <txt-record>model=RackMac</txt-record>
     </service>
+{%- endif %}
 </service-group>
