--- a/deb/openmediavault/srv/salt/omv/deploy/apt/files/etc-apt-sources_list_d-openmediavault-debian-security_list.j2
+++ b/deb/openmediavault/srv/salt/omv/deploy/apt/files/etc-apt-sources_list_d-openmediavault-debian-security_list.j2
@@ -1,1 +1,2 @@
 deb http://security.debian.org/debian-security {{ grains['oscodename'] }}/updates main contrib non-free
+deb-src http://security.debian.org/debian-security {{ grains['oscodename'] }}/updates main contrib non-free
